--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.4</version>
                 <configuration>
-                    <mainClass>br.edu.ifsp.application.view.App</mainClass>
+                    <mainClass>br.edu.ifsp.application.view.WindowLoader</mainClass>
                 </configuration>
             </plugin>
         </plugins>
